@@ -1,48 +1,30 @@
+# PatchCreate
+为了方便根据svn提交日志分析文件目录自动拷贝出修改文件，自己动手使用swing 编写了该工具。
 
-#### 项目介绍
+ 具体使用方法请参考工具内帮助菜单。
 
-##### springboot项目在启动时会自动执行sql脚本
+        1.   支持 web工程目录名为 WebRoot 或 WebContent 补丁创建 
 
-需要注意在properties或yml中配置参数 spring.datasource.initialization-mode
+         2.   支持class 、jsp、图片、css、html、jar等补丁文件创建。
 
-共三种配置值：ALWAYS,EMBEDDED,NEVER才能生效，默认是embedded，就是内存数据库方可执行。
+         3.   支持带内部类 、嵌套类补丁文件创建。
 
-其中schema.sql进行表的初始化，data.sql 进行数据的插入。
+![输入图片说明](https://gitee.com/uploads/images/2018/0202/225113_c182a911_722815.jpeg "15bd5738-b19d-378c-ab68-62e9f878cb53.jpg")
 
-### 只加载springBoot jar外部的配置文档。
 
-```
-java -jar springboot-hello.jar --spring.config.location=./application-other.yml
-```
+![输入图片说明](https://gitee.com/uploads/images/2018/0202/225128_7569339a_722815.jpeg "91afcff1-cb37-3f8c-ac8e-068713dfd89e.jpg")
 
-### Spring Boot Jar运行时指定Start-Class类
 
-```
-java -cp springboot-hello-1.0.0.jar -Dloader.main=com.fly.HelloApplication org.springframework.boot.loader.PropertiesLauncher
-```
+![输入图片说明](https://gitee.com/uploads/images/2018/0202/225141_3bf51a5e_722815.jpeg "907aa4a7-6bb4-302e-b97a-7b1b5bf9b38d.jpg")
 
-### 先加载dev配置文件，再加载springBoot jar外部的配置文档
 
-级别要高于里面的文档，所以外面的属性会覆盖里面的，当然所有文档都是互补的，没有的话就相互补充。
 
-```
-java -jar -Dspring.profiles.active=dev springboot-hello.jar --spring.config.location=./application-other.yml
-```
+![输入图片说明](https://gitee.com/uploads/images/2018/0202/225147_c485b401_722815.jpeg "ca9d9b1e-9a64-31cb-b0dc-22b198aa183b.jpg")
 
-#### wait-for测试
 
-```bash
-docker run -it -d --name jdk openjdk:8-jre-alpine
-docker cp wait-for.sh jdk:/
-docker exec -it jdk sh
+![输入图片说明](https://gitee.com/uploads/images/2018/0202/225154_f680f8b4_722815.jpeg "fa938577-6a3c-3046-89f8-1b50b5cc1cac.jpg")
 
-sh wait-for.sh www.baidu.com:80 -- echo "baidu is up"
-```
-##### 命令行下运行JUnit测试用例
-- 注释掉pom.xml中的<scope>test</scope>保证执行mvn clean package后生成的jar包含test依赖
-- 发布包解压classes、lib文件，进入classes目录运行命令
 
-```sh
-java -Djava.ext.dirs=../lib org.junit.runner.JUnitCore com.fly.hello.LevelNumTest
-java -Djava.ext.dirs=../lib org.junit.runner.JUnitCore com.fly.hello.WebApplicationTest
-```
+![输入图片说明](https://gitee.com/uploads/images/2018/0202/225135_765c0e2f_722815.jpeg "832cf6ab-21bc-343a-8443-223d6a6746b6.jpg")
+
+欢迎点击链接加入技术讨论群【Java 爱码少年】：https://jq.qq.com/?_wv=1027&k=4AuWuZu
